# text4q-cortex

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cortex/: __init__.py  cli.py  core.py  models.py  session.py
cortex/cloud/: dashboard.html  models.py  queue.py  server.py
cortex/connectors/: ibm.py
cortex/nlp/: engine.py  llm_engine.py  optimizer.py  sequential.py  validator.py
cortex/scheduler/: integration.py  optimizer.py  problem.py  qaoa.py
docs/: CONTRIBUTING.md
examples/: quickstart.py
tests/integration/: test_cloud_api.py
tests/unit/: test_cli_dashboard.py  test_llm_engine.py  test_nlp_engine.py  test_qaoa_scheduler.py  test_sequential_parser.py  test_session.py  test_validator.py
