[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text4q-cortex"
version = "0.1.4"
description = "Natural language interface for quantum computing infrastructure"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "text4q Cortex Contributors" }
]
keywords = ["quantum computing", "nlp", "qiskit", "openqasm", "orchestration"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "qiskit>=1.0",
  "qiskit-ibm-runtime>=0.20",
  "pennylane>=0.35",
  "openai>=1.0",          # LLM backend for NLP engine (optional fallback)
  "pydantic>=2.0",
  "typer>=0.9",
  "rich>=13.0",
  "httpx>=0.25",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.1",
  "mypy>=1.0",
  "pre-commit>=3.0",
]
aer = [
  "qiskit-aer>=0.13",
]

[project.scripts]
cortex = "cortex.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
